# MoE-forge

./: .gitignore  LICENSE  README.md  RESEARCH_NOTES.md  ROADMAP.md  pyproject.toml
docs/: GGUF_EXPORT_SCOPING.md
examples/adaptive-k/: adaptive_k.py
examples/compress-evolve/: autoloop.py  eval_compression.py  packed.py  stances.json  validate.py
examples/grouping-search/: adaptive_results.txt  beam_results.txt  calib.txt  capture_layer.py  carve_evolved_8.py  check_sqseed.py  debug_sqseed.py  eval_candidate.py  finaltest_results.txt  gate_oracle_recon.py  hierarchical_results.txt  paramtune_results.txt  run_adaptive.py  run_beam.py  run_expertswap.py  run_fast_swap.py  run_finaltest.py  run_gen6b.py  run_gen6test.py  run_hierarchical.py  run_longrun.py  run_multikmeans.py  run_ncand4.py  run_paramtune.py  run_perturb2.py  run_perturb3.py  run_perturb4.py  run_screen.py  run_sqseed.py  run_swapprofile.py  run_swapsweep.py  run_swapsweep2.py  run_swapsweep3.py  run_timing.py  run_timing2.py  (+36 more)
reconception-engine/: METHODOLOGY.md  README.md
tests/: test_alphaevolve.py  test_batch.py  test_benchmark.py  test_carve.py  test_conversion.py  test_corpus.py  test_evaluation.py  test_grouping.py  test_hf_runtime.py  test_inspectors.py  test_jobs.py  test_materialize.py  test_model_card.py  test_planner.py  test_preflight.py  test_profiling.py  test_publish.py  test_recovery.py  test_recovery_compare.py  test_recovery_experiment.py  test_recovery_runner.py  test_reports.py  test_router.py  test_runtime.py  test_smoke.py  test_summary.py  test_tensors.py  test_wrapper.py
(+99 files in other folders)
